fix multi-jar issues , add in graphQL support